[project]
name = 'packr'
version = '2.0'
description = "Package and optimize Minecraft Resource Packs"
authors = [
    { name = "Soumeh" }
]
dependencies = [
    "Pillow",
    "requests",
]

[tool.setuptools]
packages = [
    'packr',
    'packr.hosts'
]

[project.scripts]
principality = "packr.__main__:main"